<resources>
    <string name="app_name">Habits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="habit_title">Название привычки</string>
    <string name="new_habit">Новая привычка</string>
    <string name="habit_description">Описание: %s</string>
    <string name="habit_priority">Приоритет: %s</string>
    <string name="habit_type">Тип: %s</string>
    <string name="habit_frequency">Периодичность: %d %s в %d %s</string>
    <string name="bad_habits_can_do">Можете выполнить еще %d %s.</string>
    <string name="bad_habits_can_not_do">Хватит это делать.</string>
    <string name="good_habits_can_do">Стоит выполнить еще %d %s.</string>
    <string name="good_habits_can_not_do">You are breathtaking!</string>
    <string name="days_period_end">До конца отчетного периода осталось %d %s</string>
    <string name="adding_habit">adding_habit</string>
    <string name="habit_name">Название привычки</string>
    <string name="description">Описание</string>
    <string name="habit">Привычка</string>
    <string name="frequency">Периодичность</string>
    <string name="priority">Приоритет</string>
    <string name="type">Тип</string>
    <string name="good_habits">Хорошие</string>
    <string name="bad_habits">Плохие</string>
    <string name="edit_frequency">Периодичность</string>
    <string name="count">Количество:</string>
    <string name="_2">2</string>
    <string name="period">Период: </string>
    <string name="day_period">кол-во дней</string>
    <string name="save_button">Сохранить</string>
    <string name="color">Цвет</string>
    <string name="blue_color_text">Синий</string>
    <string name="yellow_color_text">Желтый</string>
    <string name="nav_header_title">Заголовок</string>
    <string name="menu_home">Домашний экран</string>
    <string name="menu_app_info">Информация о приложении</string>
    <string name="habit_tracker">Трекер привычек</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="info">Трекер привычек - приложение, которое поможет вам отслеживать выполнение привычек.</string>
    <string name="version">Версия приложения: %d.%d</string>
    <string name="add_habit">Добавление привычки</string>
    <string name="filterAndSort">Фильтрация и сортировка</string>
    <string name="find">Найти:</string>
    <string name="habitTitle">название привычки</string>
    <string name="sortByTitle">Сортировка названия:</string>
    <string name="alphabetical_order">В прямом алфавитном порядке</string>
    <string name="reverse_alphabetical_order">обратный алфавитный порядок</string>
    <string name="sort_priority">Сортировка приоритетности:</string>
    <string name="delete">Удалить</string>
    <string name="image">image</string>
    <string name="habit_done">Пометить выполненной</string>
    <string name="done_count">%d / %d</string>
    <string-array name="priorities">
        <item>Высокий</item>
        <item>Средний</item>
        <item>Низкий</item>
    </string-array>
    <string-array name="periods">
        <item>День</item>
        <item>Неделя</item>
        <item>Месяц</item>
        <item>Год</item>
    </string-array>
    <plurals name="pluralsForCount">
        <item quantity="zero">раз</item>
        <item quantity="one">раз</item>
        <item quantity="two">раза</item>
        <item quantity="few">раза</item>
        <item quantity="many">раз</item>
        <item quantity="other">раз</item>
    </plurals>
    <plurals name="pluralsForDays">
        <item quantity="zero">дней</item>
        <item quantity="one">день</item>
        <item quantity="two">дня</item>
        <item quantity="few">дня</item>
        <item quantity="many">дней</item>
        <item quantity="other">дней</item>
    </plurals>
</resources>