<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HabitAddendumFragment">

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar_addendum"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/green"-->
<!--            android:elevation="4dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            android:theme="@style/Theme.HabitsWithoutWindowBar"-->
<!--            app:popupTheme="@style/Theme.HabitsWithoutWindowBar"/>-->

        <TextView
            android:id="@+id/title_add_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/habit_name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_habit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_habit"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="@id/title_add_screen"
            app:layout_constraintTop_toBottomOf="@id/title_add_screen" />

        <TextView
            android:id="@+id/description_add_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/description"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/edit_habit_name"
            app:layout_constraintTop_toBottomOf="@id/edit_habit_name" />

        <EditText
            android:id="@+id/edit_habit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habit"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="@id/description_add_screen"
            app:layout_constraintTop_toBottomOf="@id/description_add_screen" />

        <TextView
            android:id="@+id/edit_habit_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/priority"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/edit_habit_description"
            app:layout_constraintTop_toBottomOf="@id/edit_habit_description" />

        <Spinner
            android:id="@+id/edit_priority_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/priorities"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="@id/edit_habit_priority"
            app:layout_constraintTop_toBottomOf="@id/edit_habit_priority" />

        <TextView
            android:id="@+id/edit_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/type"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/edit_priority_spinner"
            app:layout_constraintTop_toBottomOf="@id/edit_priority_spinner" />

        <RadioGroup
            android:id="@+id/edit_type_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="@id/edit_type"
            app:layout_constraintTop_toBottomOf="@id/edit_type">

            <RadioButton
                android:id="@+id/radio_button_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_habit" />

            <RadioButton
                android:id="@+id/radio_button_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bad_habit" />
        </RadioGroup>

        <TextView
            android:id="@+id/edit_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/edit_frequency"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/edit_type_radio_group"
            app:layout_constraintTop_toBottomOf="@id/edit_type_radio_group" />

        <LinearLayout
            android:id="@+id/layout_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/edit_frequency"
            app:layout_constraintTop_toBottomOf="@id/edit_frequency">

            <TextView
                android:id="@+id/text_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/count"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/_2"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="#757575"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/layout_count"
            app:layout_constraintTop_toBottomOf="@id/layout_count">

            <TextView
                android:id="@+id/text_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/period"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/day_period"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="#757575"
                android:textSize="15sp" />
        </LinearLayout>

        <!--        <Button-->
        <!--            android:id="@+id/choose_color_button"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Выбрать цвет"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/layout_period" />-->

        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/color"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/layout_period"
            app:layout_constraintTop_toBottomOf="@id/layout_period" />

        <RadioGroup
            android:id="@+id/edit_color_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="@id/color"
            app:layout_constraintTop_toBottomOf="@id/color">

            <RadioButton
                android:id="@+id/red_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red_color_text"
                android:buttonTint="@color/red"/>

            <RadioButton
                android:id="@+id/green_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green_color_text"
                android:buttonTint="@color/green"/>
        </RadioGroup>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
<!--            app:layout_constraintTop_toBottomOf="@id/choose_color_button" />-->



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>