<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:behavior_peekHeight="32dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/sort_filter_text_view"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/filterAndSort"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_find_by_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/sort_filter_text_view"
            app:layout_constraintTop_toBottomOf="@id/sort_filter_text_view">

            <TextView
                android:id="@+id/filter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_filter_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/habitTitle"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="#757575"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_sort_by_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/layout_find_by_title"
            app:layout_constraintTop_toBottomOf="@id/layout_find_by_title">

            <TextView
                android:id="@+id/sortTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sortByTitle"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="50dp"
                android:paddingEnd="0dp">

                <ImageButton
                    android:id="@+id/arrow_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alphabetical_order"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_down"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/arrow_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/reverse_alphabetical_order"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_up"
                    app:layout_constraintStart_toEndOf="@id/arrow_down"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_sort_by_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_sort_by_title">

            <TextView
                android:id="@+id/sortPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_priority"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <ImageButton
                    android:id="@+id/arrow_down_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alphabetical_order"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_down"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/arrow_up_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/reverse_alphabetical_order"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_up"
                    app:layout_constraintStart_toEndOf="@id/arrow_down_priority"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>